<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_marginStart="@dimen/_10sdp"
  android:layout_marginEnd="@dimen/_10sdp"
  android:gravity="center"
  android:orientation="vertical">

  <TextView
    android:id="@+id/error_title"
    style="@style/avenirnext_fontstyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    android:gravity="center"
    android:padding="@dimen/_10sdp"
    android:text="@string/title"
    android:textColor="@color/red"
    android:textSize="@dimen/_18sdp"
    android:textStyle="bold" />

  <TextView
    android:id="@+id/error_explanation"
    style="@style/avenirnext_fontstyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:justificationMode="inter_word"
    android:padding="@dimen/_10sdp"
    android:text="@string/explanation"
    android:textColor="@color/gray_dark"
    android:textSize="@dimen/_12sdp" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:background="@color/light_white" />

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_20sdp">

    <TextView
      android:id="@+id/error_cancel"
      style="@style/avenirnext_fontstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_marginStart="@dimen/_20sdp"
      android:background="@android:color/transparent"
      android:text="@string/cancel"
      android:textColor="@color/red"
      android:textSize="@dimen/_16sdp" />

    <TextView
      android:id="@+id/error_ok"
      style="@style/avenirnext_fontstyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="@dimen/_20sdp"
      android:background="@android:color/transparent"
      android:gravity="center_horizontal"
      android:text="@string/allow"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/_16sdp" />
  </RelativeLayout>

</LinearLayout>
